array.island.Island.scala.error
Erreur de compilation :
Island:4: error: not found: value numbers
  for (k<- 1 to numbers.size){
                ^