array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux=0
  for (k<- 1 to numbers.size){
    if (num(k)>num(k-1)){
      nbNiveaux=nbNiveaux +1
    }
  }
}